--- a/app/src/main/res/layout/fmt_sign_in.xml
+++ b/app/src/main/res/layout/fmt_sign_in.xml
@@ -66,9 +66,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/spacer_5"
             app:boxStrokeWidth="0dp"
-            app:boxStrokeWidthFocused="0dp"
-            app:helperText="@string/fmt_sign_up_in_required"
-            app:helperTextTextColor="@color/red">
+            app:boxStrokeWidthFocused="0dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/sign_in_email"
@@ -88,8 +86,6 @@
             android:paddingTop="@dimen/spacer_5"
             app:boxStrokeWidth="0dp"
             app:boxStrokeWidthFocused="0dp"
-            app:helperText="@string/fmt_sign_up_in_required"
-            app:helperTextTextColor="@color/red"
             app:endIconMode="password_toggle">
 
             <com.google.android.material.textfield.TextInputEditText
